natgateway.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: This template creates a nat gateway in each Public subnet

Parameters:
  ExportVpcStackName:
    Description: The name of the vpc stack that export values
    Type: String 

Resources: 
  NatGateway1EIP:
    Type: AWS::EC2::EIP
    Properties:  
      Domain: VPC
      Tags: 
        - Key: Name
          Value: EIP 1

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    Properties:  
      Domain: VPC
      Tags: 
        - Key: Name
          Value: EIP 1

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId:
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PublicSubnet1
      Tags: 
        - Key: Name
          Value: Nat Gatway Public Subnet 1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId:
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PublicSubnet2
      Tags: 
        - Key: Name
          Value: Nat Gatway Public Subnet 2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: Name
          Value: Private Route Table 1
      VpcId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-VPC   

#Add a  Route to point internet-bound traffic to Nat Gateway 1
  PrivateRoute1:
      Type: AWS::EC2::Route
      Properties: 
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref NatGateway1
        RouteTableId: !Ref PrivateRouteTable1    

#Associate Private Subnet1 with Private Route Table 1
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PrivateSubnet1          

#Associate Private Subnet3 with Private Route Table 1
  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PrivateSubnet3   

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: Name
          Value: Private Route Table 2
      VpcId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-VPC   

#Add a  Route to point internet-bound traffic to Nat Gateway 1
  PrivateRoute2:
      Type: AWS::EC2::Route
      Properties: 
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref NatGateway2
        RouteTableId: !Ref PrivateRouteTable2    

#Associate Private Subnet2 with Private Route Table 2
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PrivateSubnet2          

#Associate Private Subnet4 with Private Route Table 2
  PrivateSubnet4RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: 
        Fn::ImportValue: !Sub ${ExportVpcStackName}-PrivateSubnet4
